nettoyage du code suite